<resources>
    <string name="app_name">HixNet2</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="off">OFF</string>
    <string name="connected">CONNECTED</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="chat">chat</string>
    <string name="cloud">cloud</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_8942">⋮</string>
    <string name="lastmodified">lastModified</string>
    <string name="Docs">Docs</string>
    <string name="media">Media</string>
    <string name="upload">Upload</string>
    <string name="open">Open</string>
    <string name="info">Info</string>
    <string name="devices">Devices</string>
    <string name="title_activity_home_acticity2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="invite">INVITE</string>
    <string name="scan">SCAN</string>
</resources>
