<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView"
            android:textColor="@android:color/holo_green_dark" app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            android:layout_marginBottom="12dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:background ="@android:color/black"/>
    <ToggleButton
            android:text="@string/togglebutton"
            android:layout_width="252dp"
            android:layout_height="44dp"
            android:id="@+id/toggleButton"
            android:textOff="@string/off"
            android:textOn="@string/connected"
            android:layout_marginTop="67dp" android:layout_marginBottom="89dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>