<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DeviceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">
        <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/device_search"
                android:focusable="false"
                android:focusableInTouchMode="true"
                app:defaultQueryHint="Search By Client Name Or PID"
                app:queryBackground="@null"
                app:iconifiedByDefault="false" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/devicesRecycleView"
                android:focusable="false"
                android:focusableInTouchMode="true"
                tools:listitem="@layout/file_item" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="@+id/devicesSideBar"
                app:layout_constraintTop_toBottomOf="@+id/device_search">

        </androidx.recyclerview.widget.RecyclerView>
        <FrameLayout
                android:id="@+id/devicesSideBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/transparent_black"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="end"
                    android:gravity="center" tools:ignore="UselessParent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload"
                        android:textStyle="bold"
                />
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/pdf"
                        tools:ignore="ContentDescription"
                        android:id="@+id/uploadDoc"
                />

                <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/Docs"
                        android:textStyle="italic" android:textSize="12sp"

                />
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/media"
                        android:id="@+id/uploadMedia"
                        tools:ignore="ContentDescription"
                />
                <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/media"
                        android:textStyle="italic" android:textSize="12sp"
                />


            </LinearLayout>


        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>